structures: added macro for additional type field

--- a/structures/tests/Makefile
+++ b/structures/tests/Makefile
@@ -12,7 +12,7 @@ all: $(obj)
 	$(CC) $(CFLAGS) $(src) -o $(bin)
 
 debug : $(obj)
-	$(CC) $(CFLAGS) $< -o $(bin)
+	$(CC) $(CFLAGS) $^ -o $(bin)
 
 clean:
 	$(RM) $(obj) $(bin)
